<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">KidColors</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_horizontal">Horizontal Hello World!</string>
    <string name="hello_vertical">Vertical Hello World!</string>
    <string name="black">Black</string>
    <string name="purple">Purple</string>
    <string name="green">Green</string>
    <string name="gray">Gray</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="azure">Azure</string>
    <string name="orange">Orange</string>
    <string name="white">White</string>
    <string name="red">Red</string>
    <string name="brown">Brown</string>
    <string name="fuchsia">Fuchsia</string>
    <string name="tv_default">Choose a color</string>
</resources>
